--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -29,11 +29,7 @@ jobs:
 
       - name: Create EXE with jpackage
         run: |
-          jpackage ^
-            --input . ^
-            --name Game ^
-            --main-jar Game.jar ^
-            --type exe
+          jpackage --input . --name Game --main-jar Game.jar --type exe
 
       - name: Upload EXE
         uses: actions/upload-artifact@v4
