Enhance build workflow for JAR and EXE creation
Updated JAR creation to include resources and modified EXE packaging to use a dist directory.

--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -25,11 +25,20 @@ jobs:
       - name: Create JAR
         run:
           |
-          jar -cfe Game.jar app.Main -C src .
+          jar -cfe Game.jar app.Main -C src . -C resources .
 
       - name: Create EXE with jpackage
         run: |
-          jpackage --input . --name Game --main-jar Game.jar --type exe
+          mkdir dist
+          move Game.jar dist/
+          jpackage --input dist --name Game --main-jar Game.jar --main-class app.Main --type exe --dest output
+
+#      - name: Create EXE with jpackage
+#        run: |
+#          jpackage --input . --name Game --main-jar Game.jar --main-class app.Main --type exe
+  #--icon /home/iasonas/IdeaProjects/Victims2/Victims2_EXE.png \
+  #--app-version 2.45 \
+  #--java-options "-Xmx512m"
 
       - name: Upload EXE
         uses: actions/upload-artifact@v4
