Enhance jpackage command with verbose flag
Added verbose flag to jpackage command for detailed output.

--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -31,7 +31,8 @@ jobs:
         run: |
           mkdir dist
           move Game.jar dist/
-          jpackage --input dist --name Game --main-jar Game.jar --main-class app.Main --type exe --dest output
+          jpackage --input dist --name Game --main-jar Game.jar --main-class app.Main --type exe --dest output --verbose
+#          jpackage --input dist --name Game --main-jar Game.jar --main-class app.Main --type exe --dest output
 
 #      - name: Create EXE with jpackage
 #        run: |
