Added Icon to .exe

--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -31,10 +31,9 @@ jobs:
         run: |
           mkdir dist
           move Game.jar dist/
-          jpackage --input dist --name Game --main-jar Game.jar --main-class app.Main --type exe --dest output --win-menu --win-shortcut
-  #--icon /home/iasonas/IdeaProjects/Victims2/Victims2_EXE.png \
-  #--app-version 2.45 \
-  #--java-options "-Xmx512m"
+          jpackage --input dist --name Game --main-jar Game.jar --main-class app.Main --type exe --dest output --win-menu --win-shortcut --icon resources/app_icon.ico
+        # --app-version 2.45 \
+        # --java-options "-Xmx512m"
 
       - name: Upload EXE
         uses: actions/upload-artifact@v4
